--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,10 @@
 .text {
     height: 100%;
     width: 100%;
-    color: rgb(88, 4, 4);
+    font-size: larger;
+    font-weight: bold;
+    font-style: italic;
+    color: rgb(212, 168, 46);
     padding: 20px;
     border: 2px solid black;
     transition: opacity 2.5s;
